refactor: 콘텐츠 품질 전면 개선 (EVALUATION.md 기준)
평가 점수 2.76 (D등급) → 개선 목표 4.0+ (B등급)

## 구조 개선 (B영역)
- consumer-group-offset.md(604줄) → 2개 문서로 분리
  - consumer-group.md: 기본 개념 (~250줄)
  - consumer-advanced.md: 심화 운영 (~350줄)
- 15분 읽기 기준 준수

## 신뢰성 확보 (F영역)
- 모든 문서에 Kafka 버전 명시 (3.6.x 기준)
- 벤치마크 데이터에 면책 조항 및 측정 방법 추가
- Confluent, Apache 공식 문서 출처 링크 추가

## 코드 완결성 (C영역)
- 모든 Java 예제에 import문 추가
- Spring Bean 설정 컨텍스트 추가
- Consumer Tombstone 처리 코드 추가
- 예외 처리 패턴 보강

## 보조 콘텐츠 (E영역)
- 각 문서에 FAQ 섹션 추가 (5개씩)
- 참고 자료 섹션 추가 (공식 문서, KIP, 블로그)
- 선행 지식 섹션 추가

## 변경 파일
- consumer-group.md: 신규 (기본 개념)
- consumer-advanced.md: 신규 (심화 운영)
- consumer-group-offset.md: 삭제 (분리됨)
- advanced-concepts.md: FAQ, 참고자료, 코드 개선
- producer-tuning.md: FAQ, 참고자료, 출처 명시